@@ -1,3 +1,10 @@
+Tue Apr  1 13:13:12 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * examples/AMH/Sink_Server/run_test.pl:
+        * examples/Buffered_AMI/run_test.pl:
+        * examples/OBV/Typed_Events/run_test.pl:
+          Improved these scripts
+
 Tue Apr  1 12:59:12 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tao/AnyTypeCode/AnySeq.pidl
